src/test/deca/context/invalid/classDefinition-extendsBegin.deca
class Sasuke extends Madara {}
class Madara{}
{} 
